test/octave.test/error/usage-2.m
function g () usage ("foo\n"); endfunction
function f () g endfunction
f
